# hera_qm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  linux_ci.yml  warnings-tests.yml
ci/: hera_qm_tests.yml  install_conda.sh
dirty_code/: accumulate_omnichisq.py  bin_slice.py  cal_metrics.py  correct_psa128_pols.py  hera_redis_spec.py  misc_xrfi.py  nightly_avg_SK.py  omni_check.py  plot_xtalk.py  uv_avg_SK.py  work_with_omnichisq.py  xrfi.py
docs/: README.md
hera_qm/: __init__.py  ant_class.py  ant_metrics.py  auto_metrics.py  cal_metrics.py  datacontainer.py  find_crosspols_recursive.py  firstcal_metrics.py  io.py  meanVij.py  metrics_io.py  omnical_metrics.py  time_series_metrics.py  utils.py  uvflag.py  version.py  vis_metrics.py  xrfi.py  xrfi_class.py
hera_qm/data/: a_priori_flags_integrations.yaml  a_priori_flags_jds.yaml  a_priori_flags_lsts.yaml  a_priori_flags_maximum_channels.yaml  a_priori_flags_maximum_integrations.yaml  a_priori_flags_negative_channels.yaml  a_priori_flags_negative_integrations.yaml  a_priori_flags_no_ants.yaml  a_priori_flags_no_chans.yaml  a_priori_flags_no_flags.yaml  a_priori_flags_no_integrations.yaml  a_priori_flags_old_pols.yaml  a_priori_flags_sample.yaml  antenna_flags.h5  example_ant_metrics.hdf5  example_ant_metrics.json  example_ant_metrics_all_string.json  example_firstcal_metrics.hdf5  example_firstcal_metrics.json  example_omnical_metrics.hdf5  example_omnical_metrics.json  example_two_polarization_firstcal_results.hdf5  frequency_flag_test_file.txt  frequency_flags.txt  heratest_calfile.py  lst_flag_test_file.txt  test_detrend_meanfilt_ans.txt  test_detrend_medfilt_ans.txt  test_detrend_medfilt_ans_v2.txt  test_detrend_medfilt_complex_ans.txt  test_detrend_medfilt_complex_ans_v2.txt  test_detrend_medminfilt_ans.txt  upper_lower_flags.txt  zen.2457555.42443.HH.uvcA.omni.calfits  zen.2457555.42443.xx.HH.uvcA.bad.omni.calfits  zen.2457555.42443.xx.HH.uvcA.first.calfits  zen.2457555.42443.xx.HH.uvcA.first.calfits.rotated_metric.json  zen.2457555.42443.xx.HH.uvcA.good.omni.calfits  zen.2457555.42443.xx.HH.uvcA.reallybad.first.calfits  zen.2457555.42443.xx.HH.uvcA.reallybad.omni.calfits  (+26 more)
hera_qm/data/ant_backup/: example_ant_metrics.hdf5
hera_qm/data/test_output/: ant_metrics_output.json
hera_qm/data/zen.2457698.40355.xx.HH.uvcA/: flags  history  visdata
hera_qm/data/zen.2457698.40355.xx.HH.uvcAA/: flags  header  history  vartable  visdata
hera_qm/data/zen.2457698.40355.xy.HH.uvcA/: flags  header  history  visdata
hera_qm/data/zen.2457698.40355.yx.HH.uvcA/: flags  history  visdata
hera_qm/data/zen.2457698.40355.yy.HH.uvcA/: flags  history  visdata
hera_qm/data/zen.2458002.47754.xx.HH.uvA/: flags  header
hera_qm/data/zen.2458002.47754.xy.HH.uvA/: flags  header  history  vartable
hera_qm/data/zen.2458002.47754.yx.HH.uvA/: header
hera_qm/data/zen.2458002.47754.yy.HH.uvA/: header
hera_qm/scripts/: __init__.py  ant_metrics_example_notebook.ipynb  ant_metrics_run.py  auto_metrics_run.py  auto_view.py  delay_xrfi_h1c_idr2_1_run.py  firstcal_metrics_example.ipynb  firstcal_metrics_run.py  omnical_metrics_example.ipynb  omnical_metrics_run.py  test_red_corr_metrics.ipynb  test_xrfi_performance.py  xrfi_apply.py  xrfi_day_threshold_run.py  xrfi_h1c_run.py  xrfi_h3c_idr2_1_run.py  xrfi_h3ca_rtp_run.py  xrfi_run.py  xrfi_run_data_only.py
hera_qm/tests/: __init__.py  conftest.py  test_ant_class.py  test_ant_metrics.py  test_auto_metrics.py  test_datacontainer.py  test_firstcal_metrics.py  test_io.py  test_metrics.py  test_metrics_io.py  test_omnical_metrics.py  test_time_series_metrics.py  test_utils.py  test_uvflag.py  test_version.py  test_vis_metrics.py  test_xrfi.py
plots/: firstcal_metrics_plots.py
scripts/: ant_metrics_example.py  ant_metrics_example_notebook.ipynb  ant_metrics_run.py  auto_metrics_run.py  auto_view.py  cal_xrfi_run.py  delay_xrfi_h1c_idr2_1_run.py  delay_xrfi_h1c_idr2_2_run.py  delay_xrfi_run.py  firstcal_metrics.ipynb  firstcal_metrics_example.ipynb  firstcal_metrics_run.py  omnical_metrics_example.ipynb  omnical_metrics_run.py  roto_flag_run.py  test_coverage.sh  test_xrfi_performance.py  xrfi_apply.py  xrfi_cal_h1c_idr2_2_run.py  xrfi_day_threshold_run.py  xrfi_h1c_run.py  xrfi_h3c_idr2_1_run.py  xrfi_h3ca_rtp_run.py  xrfi_revamp_2018.ipynb  xrfi_run.py  xrfi_run_data_only.py  xrfi_run_nozscore.py
